--- a/VedantPayUI/login.html
+++ b/VedantPayUI/login.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                    <li class="nav-item active">
-                    <a class="nav-link" href="./home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./services.html">Services</a>
