--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
 
     <!-- contact -->
     <div class="container-fluid rounded" id="contacts-section" style="margin-top: 25px">
-      <div class="row px-5" style="margin: 3% 10%">
-        <div class="col-sm-6">
+      <div class="row px-5" >
+        <div class="col-sm-6 left-card">
           <div>
             <h3 class="text-black">Get a quote</h3>
             <p class="text-secondary">
@@ -68,21 +68,23 @@
             </p>
           </div>
           <div class="links" id="bordering">
-            <a href="#" class="btn rounded text-secondary p-3"
+            <a href="#" class="contact text-secondary p-3"
               ><img class="contacts-icon"
                 src="https://img.icons8.com/ios-glyphs/23/000000/phone--v1.png"
               />+0123 4567 8910</a
             >
-            <a href="#" class="btn rounded text-secondary p-3">
+            <a href="#" class="contact text-secondary p-3">
               <img class="contacts-icon"
                 src="https://img.icons8.com/material-two-tone/23/000000/send-mass-email.png"
               />hello@flowbase.com</a
             >
-            <a href="#" class="btn rounded text-secondary p-3"
+            <a href="#" class="contact text-secondary p-3"
               ><img class="contacts-icon" src="https://img.icons8.com/material/23/000000/worldwide-location.png"/></i>102 street
               2714 Don</a
             >
+           
           </div>
+          <!--
           <div class="pt-lg-4 d-flex flex-row justify-content-start">
             <div class="pad-icon">
               <a class="fa fa-facebook text-white" href="#"></a>
@@ -93,9 +95,11 @@
             <div class="pad-icon">
               <a class="fa fa-instagram text-white" href="#"></a>
             </div>
+            
           </div>
+          -->
         </div>
-        <div class="col-sm-6 pad">
+        <div class="col-sm-6 pad right-card">
           <form class="rounded msg-form">
             <div class="form-group">
               <label for="name" class="h6">Your Name</label>
