--- a/login.html
+++ b/login.html
@@ -70,6 +70,9 @@
       </nav>
 </div>
 
+ <!------------------ Navbar END ----------------------->
+
+
 
     <!-------------------------------- login -------------------------------------------------->
 
@@ -123,6 +126,7 @@
         </div>
       </div>
     </div>
+      <!-------------------------------- login END -------------------------------------------------->
 
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
      <script src="./js/jquery.min.js" type="text/javascript"></script>
