contact page updated

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 
     <!-- contact -->
     <div class="container-fluid rounded" id="contacts-section" style="margin-top: 25px">
-      <div class="row px-5" >
+      <div class="row px-5 card0" >
         <div class="col-sm-6 left-card">
           <div>
             <h3 class="text-black">Get a quote</h3>
