--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
 
       <div class="w-100">
         <div class="container-fluid mt-3"> <!-- 1st Section For Services Page -->
-        <div class="row">
+        <div class="row m-0">
           <div class="col-12 col-md-6 m-auto"><!-- Image Div -->
               <img src="./images/img/hero-img.png" class="rounded mx-auto d-block img-fluid">
           </div>
@@ -119,7 +119,7 @@
         <section>
           
           <div class="container-fluid mt-5 mb-5">
-            <div class="row">
+            <div class="row m-0">
               <div class="col-12 col-md-4 m-auto"><!-- 1st DIV -->
                 <div class="w-100 text-light"><h5 class="p-1 primary_theme_bgcolor w-50 w-md-75">SERVICES</h5></div>
               <h1>We Have Best Feature</h1>
