--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@
 
       <div class="w-100">
         <div class="row m-0">
-          <div class="col-12 text-center mt-5 mb-5"><h1>SERVICES</h1></div>
+          <div class="col-12 text-center mt-5 mb-5"><h1 class="heading-line"> SERVICES </h1></div>
         </div>
       </div>
 
