Homepage bottom slide

--- a/index.html
+++ b/index.html
@@ -207,31 +207,45 @@
     </div>
     <!-- Get a quote ends here -->
 
+
+    <div class="col-lg-8 col-md-12 ml-auto mr-auto">
+        <div class="section-title">
+          <h2>Smart Solutions for Everyone</h2>
+          <!-- <h6 class="title"> Whether you are a retailer, distributor, individual or self help group, we have smart solutions for everyone.</h6>  -->
+        </div>
+      </div>
+
     <!-- ************************************************ -->
     <div class="autoplay mt-5 mb-1" id="scroll-bar">
 
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/01.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>वेदांत पेय पंजीकरण करें</h5>
         </div>
   
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/02.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>अपना खाता बनाएँ</h5>
         </div>
   
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/03.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>वेदांत पेय की सेवाएं उपयोग करे</h5>
         </div>
   
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/04.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>लोन सुविधा</h5>
         </div>
   
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/05.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>कमीशन की सुविधा</h5>
         </div>
   
-        <div class=" mx-5" style="width: 12rem;">
+        <div class=" mx-5 text-center" style="width: 12rem;">
           <img src="./images/img/services/06.png" class="card-img-top img-cover" alt="..." style="height:120px;">
+          <h5>EMI पेमेंट</h5>
         </div>
       </div>
 
