Title Changed in Home Page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="./css/font-awesome.css">
      <!-- Custom CSS Vedant Pay-->
      <link rel="stylesheet" href="./css/custom/custom.css">
+
+     <!-- Sevices CSS -->
+        <link rel="stylesheet" href="css/custom/services.css">
+
     <!-- homepage CSS-->
      <link rel="stylesheet" href="./css/custom/homepageform.css">
      <!--text animation https://animate.style/-->
@@ -172,7 +176,14 @@
     </section>
 
      
-
+ <!-- title start -->
+ <div class="col-lg-8 col-md-12 ml-auto mr-auto">
+    <div class="whytitle">
+      <h2 class="heading-line"> Why you shoud choose us</h2>
+      <!-- <h6 class="title"> Whether you are a retailer, distributor, individual or self help group, we have smart solutions for everyone.</h6>  -->
+    </div>
+  </div>
+   <!-- title end -->
     <!-- Get a quote Start here -->
     <div class="container-fluid margin0">
         <div class="row margin0">
@@ -208,12 +219,14 @@
     <!-- Get a quote ends here -->
 
 
+    <!-- title start -->
     <div class="col-lg-8 col-md-12 ml-auto mr-auto">
         <div class="section-title">
-          <h2>Smart Solutions for Everyone</h2>
+          <h2 class="heading-line"> Smart Solutions for Everyone</h2>
           <!-- <h6 class="title"> Whether you are a retailer, distributor, individual or self help group, we have smart solutions for everyone.</h6>  -->
         </div>
       </div>
+       <!-- title end -->
 
     <!-- ************************************************ -->
     <div class="autoplay mt-5 mb-1" id="scroll-bar">
