--- a/login.html
+++ b/login.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" >
     <!-- Fontawesom CSS -->
     <link rel="stylesheet" href="./css/font-awesome.css">
+      <!-- Fontawesom3 CSS -->
+      <link rel="stylesheet" href="./css/font-awesome3.css">
+
      <!-- Custom CSS Vedant Pay-->
      <link rel="stylesheet" href="./css/custom/custom.css">
      <!-- Login CSS Vedant Pay-->
@@ -42,6 +45,10 @@
                 </li>
 
                 <li class="nav-item">
+                  <a class="nav-link" href="./gallery.html">Gallery</a>
+              </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
 
@@ -50,7 +57,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
+                    <a class="nav-link globalBtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
                 </li>
 
                   <!--<li class="nav-item dropdown">
@@ -112,9 +119,10 @@
                 <a href="#" class="ml-auto mb-0 text-sm">Forgot Password?</a>
               </div>
               <div class="row mb-3 px-3">
-                <button type="submit" class="btn btn-blue text-center">
+
+                <a type="submit" class="btn globalBtn ">
                   Login
-                </button>
+                </a>
                
               </div>
             </div>
@@ -123,6 +131,85 @@
       </div>
     </div>
       <!-------------------------------- login END -------------------------------------------------->
+
+
+
+            <!---------------  Footer  ---------------------------->
+            <footer class="new_footer_area bg_color">
+              <div class="new_footer_top">
+                  <div class="container-fluid">
+                      <div class="row margin0 footrcontent">
+                          <div class="col-lg-3 col-md-6">
+                              <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                                  <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                                  <p>Don’t miss any updates of our new templates and extensions.!</p>
+                                  <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true" _lpchecked="1">
+                                      <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                                      <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                                      <p class="mchimp-errmessage" style="display: none;"></p>
+                                      <p class="mchimp-sucmessage" style="display: none;"></p>
+                                  </form>
+                              </div>
+                          </div>
+                          <div class="col-lg-3 col-md-6">
+                              <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                                  <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                                  <ul class="list-unstyled f_list">
+                                      <li><a href="#">Company</a></li>
+                                      <li><a href="#">Android App</a></li>
+                                      <li><a href="#">ios App</a></li>
+                                      <li><a href="#">Desktop</a></li>
+                                      <li><a href="#">Projects</a></li>
+                                      <li><a href="#">My tasks</a></li>
+                                  </ul>
+                              </div>
+                          </div>
+                          <div class="col-lg-3 col-md-6">
+                              <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                                  <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                                  <ul class="list-unstyled f_list">
+                                      <li><a href="#">FAQ</a></li>
+                                      <li><a href="#">Term &amp; conditions</a></li>
+                                      <li><a href="#">Reporting</a></li>
+                                      <li><a href="#">Documentation</a></li>
+                                      <li><a href="#">Support Policy</a></li>
+                                      <li><a href="#">Privacy</a></li>
+                                  </ul>
+                              </div>
+                          </div>
+                          <div class="col-lg-3 col-md-6">
+                              <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                                  <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                                  <div class="f_social_icon">
+                                      <a href="#" class="fab fa-facebook"></a>
+                                      <a href="#" class="fab fa-twitter"></a>
+                                      <a href="#" class="fab fa-linkedin"></a>
+                                      <a href="#" class="fab fa-pinterest"></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="footer_bg">
+                      <div class="footer_bg_one"></div>
+                      <div class="footer_bg_two"></div>
+                  </div>
+              </div>
+              <div class="footer_bottom">
+                  <div class="container">
+                      <div class="row align-items-center">
+                          <div class="col-lg-6 col-sm-7">
+                              <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
+                          </div>
+                          <div class="col-lg-6 col-sm-5 text-right global_centr_align">
+                              <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </footer>
+           <!------------------- End Footer ---------->
+            
 
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
      <script src="./js/jquery.min.js" type="text/javascript"></script>
