--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" style="padding-left: 15px;">
                     <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
                 </li>
 
