--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       
    
       <nav class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
             <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
         </a>
        
