--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     
     <div class="container-fluid padding0">
       <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./index.html">
               <img class="logosize " alt="vedantpay.com" src="./images/logo/logo.png">
           </a>
          
