--- a/services.html
+++ b/services.html
@@ -68,6 +68,10 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" href="./gallery.html">Gallery</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="./about.html">About</a>
           </li>
 
@@ -145,8 +149,8 @@
           <p><i class="icon-ok-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
             dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
         </div>
-        <div class="col-md-6 col-12 ">
-          <img src="./images/img/services/card.jpg" class="img-fluid" alt="">
+        <div class="col-md-6 col-12 " data-aos="zoom-in" data-aos-duration="3000">
+          <img src="./images/img/services/card.jpg" class="img-fluid" alt="" >
         </div>
       </div>
 
@@ -159,17 +163,18 @@
     <section>
       <div class="mx-5 mt-5">
         <div class="row m-0">
-          <div class="col-12 text-center">
-            <h3 class="heading-line"> We Have Best Features </h3>
-            <p class="m-5">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
+          <div class="col-12 text-center" data-aos="zoom-in" data-aos-duration="3000">
+            <h3 class=""> We Have Best Features </h3>
+            <span class="line-heading"></span>
+            <!-- <p class="m-5">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
               Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-              fugiat sit in iste officiis commodi quidem hic quas.</p>
+              fugiat sit in iste officiis commodi quidem hic quas.</p> -->
           </div>
         </div>
       </div>
       <div class="">
         <div class="row m-0">
-          <div class="col-12 col-md-4  my-3">
+          <div class="col-12 col-md-4  my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/01.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Digital Marketing</h4>
@@ -179,7 +184,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4  my-3">
+          <div class="col-12 col-md-4  my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/01.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Digital Marketing</h4>
@@ -189,7 +194,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 my-3">
+          <div class="col-12 col-md-4 my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/02.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Content Marketing</h4>
@@ -199,7 +204,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 my-3">
+          <div class="col-12 col-md-4 my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/03.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Content Marketing</h4>
@@ -210,7 +215,7 @@
 
           </div>
 
-          <div class="col-12 col-md-4 my-3">
+          <div class="col-12 col-md-4 my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/04.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Content Marketing</h4>
@@ -220,7 +225,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 my-3">
+          <div class="col-12 col-md-4 my-3" data-aos="zoom-in" data-aos-duration="3000">
             <div class="card-hover-effect">
               <img src="./images/img/services/05.png" class="rounded mx-auto d-block mt-4 card-img-height-width">
               <h4 class="mt-3 text-center">Content Marketing</h4>
@@ -268,11 +273,12 @@
     <!-- Box 3 -->
     <div class="my-5">
       <div class="row m-0">
-        <div class="col-12 text-center mb-3">
-          <h3 class="heading-line mb-5"> Few Words About Us </h3>
-          <p class="mx-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="col-12 text-center mb-3" data-aos="zoom-in" data-aos-duration="3000">
+          <h3 class=""> Few Words About Us </h3>
+          <span class="line-heading"></span>
+          <!-- <p class="mx-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
         </div>
-        <div class="col-md-6 col-12">
+        <div class="col-md-6 col-12" data-aos="zoom-in" data-aos-duration="3000">
           <img src="./images/img/services/about-img.svg" class="img-fluid" alt="">
         </div>
         <div class="col-md-6 col-12">
