--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,8 @@
     <!-- SLIK CSS -->
     <link rel="stylesheet" href="css/slick/slick.css">
     <link rel="stylesheet" href="css/slick/slick-theme.css">
+    <!-- SRVICES.CSS -->
+    <link rel="stylesheet" href="./css/custom/services.css">
 
     <!-- Gallery CSS -->
     <link rel="stylesheet" href="./css/custom/gallery.css">
@@ -111,8 +113,16 @@
             </div>
         </div>
         <!--Marquee End-->
+        <div class="mt-3 mb-3 ">
+            <div class="text-center">
+                <h3 class="mb-0 heading-line"> Gallery </h3>
+                <!-- <span class="line-heading"></span> -->
+            </div>
+        </div>
 
         
+
+
 
 
 
