--- a/registration.html
+++ b/registration.html
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
 
-                <li class="nav-item" style="padding-left: 15px;">
+                <li class="nav-item " style="padding-left: 15px;">
                     <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i>
                         <span>Login</span></a>
                 </li>
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="text-right">
 
-                                    <a type="submit" class="btn globalBtn text-center mt-3 ">
+                                    <a type="submit" class="btn glowing_button text-center mt-3 ">
                                       Register
                                     </a>
                           
