--- a/about.html
+++ b/about.html
@@ -28,6 +28,19 @@
 
 <body>
 
+  <div class="precontainer">
+    <div class="loader">
+
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__ball"></div>
+      <p>Loading...</p>
+    </div>
+  </div>
+
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="./index.html">
@@ -41,7 +54,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./services.html">Services</a>
@@ -336,130 +349,131 @@
               <h2>Selena Gomez</h2>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. aperiam odio corporis ex laboriosam!</p>
           </div>
-      </div>
-      <div class="screen">
+        </div>
+        <div class="screen">
         <div class="content">
             <h2>Selena Gomez</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. aperiam odio corporis ex laboriosam!</p>
         </div>
-    </div>
-    <div class="screen">
+        </div>
+        <div class="screen">
       <div class="content">
           <h2>Selena Gomez</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. aperiam odio corporis ex laboriosam!</p>
       </div>
   </div>
-
-
--->
-
-
     </section>
   </div>
 
+  
+-->
 
 
 
-  <!--------------END Portfolio slider   ----------------------->
+
+    <!--------------END Portfolio slider   ----------------------->
 
 
-  <!---------------  Footer  ---------------------------->
-  <footer class="new_footer_area bg_color">
-    <div class="new_footer_top">
-      <div class="container-fluid">
-        <div class="row margin0 footrcontent">
-          <div class="col-lg-3 col-md-6">
-            <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
-              style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-              <p>Don’t miss any updates of our new templates and extensions.!</p>
-              <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true"
-                _lpchecked="1">
-                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                <p class="mchimp-errmessage" style="display: none;"></p>
-                <p class="mchimp-sucmessage" style="display: none;"></p>
-              </form>
+    <!---------------  Footer  ---------------------------->
+    <footer class="new_footer_area bg_color">
+      <div class="new_footer_top">
+        <div class="container-fluid">
+          <div class="row margin0 footrcontent">
+            <div class="col-lg-3 col-md-6">
+              <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+                style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                <p>Don’t miss any updates of our new templates and extensions.!</p>
+                <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true"
+                  _lpchecked="1">
+                  <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                  <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                  <p class="mchimp-errmessage" style="display: none;"></p>
+                  <p class="mchimp-sucmessage" style="display: none;"></p>
+                </form>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s"
-              style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Download</h3>
-              <ul class="list-unstyled f_list">
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">ios App</a></li>
-                <li><a href="#">Desktop</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">My tasks</a></li>
-              </ul>
+            <div class="col-lg-3 col-md-6">
+              <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s"
+                style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                <ul class="list-unstyled f_list">
+                  <li><a href="#">Company</a></li>
+                  <li><a href="#">Android App</a></li>
+                  <li><a href="#">ios App</a></li>
+                  <li><a href="#">Desktop</a></li>
+                  <li><a href="#">Projects</a></li>
+                  <li><a href="#">My tasks</a></li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s"
-              style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-              <ul class="list-unstyled f_list">
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Term &amp; conditions</a></li>
-                <li><a href="#">Reporting</a></li>
-                <li><a href="#">Documentation</a></li>
-                <li><a href="#">Support Policy</a></li>
-                <li><a href="#">Privacy</a></li>
-              </ul>
+            <div class="col-lg-3 col-md-6">
+              <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s"
+                style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                <ul class="list-unstyled f_list">
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Term &amp; conditions</a></li>
+                  <li><a href="#">Reporting</a></li>
+                  <li><a href="#">Documentation</a></li>
+                  <li><a href="#">Support Policy</a></li>
+                  <li><a href="#">Privacy</a></li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s"
-              style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
-              <div class="f_social_icon">
-                <a href="#" class="fab fa-facebook"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-                <a href="#" class="fab fa-pinterest"></a>
+            <div class="col-lg-3 col-md-6">
+              <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s"
+                style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                <div class="f_social_icon">
+                  <a href="#" class="fab fa-facebook"></a>
+                  <a href="#" class="fab fa-twitter"></a>
+                  <a href="#" class="fab fa-linkedin"></a>
+                  <a href="#" class="fab fa-pinterest"></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="footer_bg">
+          <div class="footer_bg_one"></div>
+          <div class="footer_bg_two"></div>
+        </div>
       </div>
-      <div class="footer_bg">
-        <div class="footer_bg_one"></div>
-        <div class="footer_bg_two"></div>
-      </div>
-    </div>
-    <div class="footer_bottom">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6 col-sm-7">
-            <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
-          </div>
-          <div class="col-lg-6 col-sm-5 text-right global_centr_align">
-            <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
+      <div class="footer_bottom">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 col-sm-7">
+              <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
+            </div>
+            <div class="col-lg-6 col-sm-5 text-right global_centr_align">
+              <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <!------------------- End Footer ---------->
+    </footer>
+    <!------------------- End Footer ---------->
 
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="./js/jquery.min.js" type="text/javascript"></script>
-  <script src="./js/popper.min.js" type="text/javascript"></script>
-  <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="./customScript/custom.js" type="text/javascript"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="./js/jquery.min.js" type="text/javascript"></script>
+    <script src="./js/popper.min.js" type="text/javascript"></script>
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./customScript/custom.js" type="text/javascript"></script>
 
-  <!--AOS-->
-  <script src="./customScript/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1000,
-    });
-  </script>
+    <!--AOS-->
+    <script src="./customScript/aos.js"></script>
+    <script>
+      $(document).ready(function (){
+        AOS.init({
+        duration: 1000,
+      });
+      });
+      
+    </script>
 
 
 </body>
