--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,23 @@
 
   <!---------------------  Navbar ------------------->
 
+
+  <div class="precontainer">
+    <div class="loader">
+
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__ball"></div>
+      <p>Loading...</p>
+    </div>
+  </div>
+
+
+
+
   <div class="container-fluid padding0">
     <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
       <a class="navbar-brand" href="./index.html">
@@ -263,6 +280,16 @@
   <script src="./js/popper.min.js" type="text/javascript"></script>
   <script src="./js/bootstrap.min.js" type="text/javascript"></script>
   <script src="./customScript/custom.js" type="text/javascript"></script>
+  <script>
+    $(document).ready(function (){
+      AOS.init({
+      duration: 1000,
+    });
+    });
+    
+  </script>
+
+
 </body>
 
 </html>
