--- a/registration.html
+++ b/registration.html
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./services.html">Services</a>
@@ -166,44 +166,44 @@
 
 
         <div class="row">
-            <div class="col-md-6 aos-init text-center p-5"  data-aos="zoom-in" data-aos-delay="700">
+            <div class="col-md-6 aos-init text-center p-5"  data-aos="zoom-in" data-aos-delay="500">
                 <img class="" width="100%" src="https://bootstrapmade.com/demo/templates/FlexStart/assets/img/features.png" alt="img">
             </div>
             <div class="col-md-6 text-center p-5">
                 <div class="row">
                     <div class="row align-self-center gy-4">
 
-                        <div class="col-md-6 p-4" data-aos="zoom-in-down" data-aos-delay="1500">
+                        <div class="col-md-6 p-4" data-aos="flip-left" data-aos-delay="1000">
                           <div class="feature-box d-flex align-items-center">
                             <i class="icon-check"></i>>Eos aspernatur rem
                           </div>
                         </div>
 
-                        <div class="col-md-6 p-4"  data-aos="zoom-in-down"data-aos-delay="1500">
+                        <div class="col-md-6 p-4"  data-aos="flip-left"data-aos-delay="1000">
                             <div class="feature-box d-flex align-items-center">
                               <i class="icon-check"></i>>Eos aspernatur rem
                             </div>
                           </div>
 
-                          <div class="col-md-6 p-4"  data-aos="flip-left" data-aos-delay="2000">
+                          <div class="col-md-6 p-4"  data-aos="flip-left" data-aos-delay="1200">
                             <div class="feature-box d-flex align-items-center">
                               <i class="icon-check"></i>>Eos aspernatur rem
                             </div>
                           </div>
 
-                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="2000">
+                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="1200">
                             <div class="feature-box d-flex align-items-center">
                               <i class="icon-check"></i>>Eos aspernatur rem
                             </div>
                           </div>
 
-                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="2500">
+                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="1500">
                             <div class="feature-box d-flex align-items-center">
                               <i class="icon-check"></i>>Eos aspernatur rem
                             </div>
                           </div>
 
-                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="2500">
+                          <div class="col-md-6  p-4"  data-aos="flip-left" data-aos-delay="1500">
                             <div class="feature-box d-flex align-items-center">
                               <i class="icon-check"></i>>Eos aspernatur rem
                             </div>
@@ -378,10 +378,14 @@
     </script>
 
 <script src="./customScript/aos.js"></script>
+
 <script>
-  AOS.init({
+$(document).ready(function (){
+    AOS.init({
     duration: 1000,
   });
+  });
+  
 </script>
 
 
