navbar updated  by abhishek

--- a/registration.html
+++ b/registration.html
@@ -36,15 +36,15 @@
         <a class="navbar-brand" href="#">
             <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
         </a>
-
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+       
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./services.html">Services</a>
@@ -63,9 +63,8 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
 
-                <li class="nav-item " style="padding-left: 15px;">
-                    <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i>
-                        <span>Login</span></a>
+                <li class="nav-item" style="padding-left: 15px;">
+                    <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
                 </li>
 
                 <!--<li class="nav-item dropdown">
@@ -79,6 +78,7 @@
             </ul>
         </div>
     </nav>
+
 
     <!--------------- Navbar end -------------->
 
