--- a/about.html
+++ b/about.html
@@ -28,59 +28,52 @@
 
 <body>
 
-  <div class="precontainer">
-    <div class="loader">
-
-      <div class="loader__bar"></div>
-      <div class="loader__bar"></div>
-      <div class="loader__bar"></div>
-      <div class="loader__bar"></div>
-      <div class="loader__bar"></div>
-      <div class="loader__ball"></div>
-      <p>Loading...</p>
-    </div>
-  </div>
-
-
-  <nav class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="./index.html">
-      <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
+  <nav id="menubar" class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
+    <a class="navbar-brand" href="#">
+        <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
     </a>
-
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+   
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./services.html">Services</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="./gallery.html">Gallery</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="./about.html">About</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i>
-            <span>Login</span></a>
-        </li>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./services.html">Services</a>
+            </li>
 
 
-      </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="./gallery.html">Gallery</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="./about.html">About</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contact</a>
+            </li>
+
+            <li class="nav-item" style="padding-left: 15px;">
+                <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
+            </li>
+
+            <!--<li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                    <a class="dropdown-item" href="#">Action 1</a>
+                    <a class="dropdown-item" href="#">Action 2</a>
+                </div>
+            </li>
+            -->
+        </ul>
     </div>
-  </nav>
+</nav>
 
   <!-- ------------- END NAV ------------------->
 
