--- a/index.html
+++ b/index.html
@@ -394,9 +394,10 @@
             <p><i class="icon-ok-circle"></i> Instant retailer onboarding.</p>
             <p><i class="icon-ok-circle"></i> Industry-leading success rates.</p>
             <p><i class="icon-ok-circle"></i> Our API is well-documented and easy to understand. Integrating is as easy as it can get. We provide 24x7 manual integration support just in case, leaving no stone unturned to make the integration process seamless.</p>
-          </div>
+            <button class="btn btn_get btn_get_two" type="submit">Know More</button>
+        </div>
           <div class="col-md-6 col-12 " data-aos="zoom-in" data-aos-duration="3000">
-            <img src="./images/img/about2.png" class="img-fluid" alt="" >
+            <img class="srvcimg" src="./images/img/about2.png" class="img-fluid" alt="" >
           </div>
         </div>
   
