heading and left margin fix

--- a/registration.html
+++ b/registration.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="./css//custom/registration.css" />
     <!-- imagehover CSS Vedant Pay-->
     <link rel="stylesheet" href="./css/custom/imagehover.css">
+
+    
+  <!-- services CSS Vedant Pay-->
+  <!-- for using heading after and before  heading-line  , line-heading-->
+  <link rel="stylesheet" href="./css/custom/services.css">
     
   <!--AOS-->
   <link href="./css/custom/aos.css" rel="stylesheet">
@@ -158,8 +163,8 @@
 
 
     <div class="container">
-        <div class="text-center">
-            <h1>benifits</h1>
+        <div class="text-center ">
+            <h1 class=" heading-line">benifits</h1>
             <p>We aim to be in close proximity to the last excluded person within the country</p>
             <hr>
         </div>
