--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
   <!-- Custom CSS Vedant Pay-->
   <link rel="stylesheet" href="./css/custom/custom.css">
 
+  <!-- services CSS Vedant Pay-->
+  <!-- for using heading after and before  heading-line  , line-heading-->
+  <link rel="stylesheet" href="./css/custom/services.css">
 
 </head>
 
@@ -43,40 +46,41 @@
 
   <nav id="menubar" class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="./index.html">
-        <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
+      <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
     </a>
-   
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./services.html">Services</a>
-            </li>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./services.html">Services</a>
+        </li>
 
 
-            <li class="nav-item">
-                <a class="nav-link" href="./gallery.html">Gallery</a>
-            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./gallery.html">Gallery</a>
+        </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="./about.html">About</a>
-            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./about.html">About</a>
+        </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contact.html">Contact</a>
+        </li>
 
-            <li class="nav-item" style="padding-left: 15px;">
-                <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
-            </li>
+        <li class="nav-item" style="padding-left: 15px;">
+          <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i>
+            <span>Login</span></a>
+        </li>
 
-            <!--<li class="nav-item dropdown">
+        <!--<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" href="#">Action 1</a>
@@ -84,9 +88,9 @@
                 </div>
             </li>
             -->
-        </ul>
+      </ul>
     </div>
-</nav>
+  </nav>
 
   <!--
 
@@ -98,11 +102,10 @@
 
 
   <!-- contact -->
-  <div class="container">
-    <h3 style="
-      font-size: 3.5rem;
-      margin-top: 20px;
-  ">Contact us</h3>
+  <div class="container text-center">
+    <h3 class="heading-line" style="font-size: 3.5rem;margin-top: 20px;">Contact us</h3>
+
+
     <hr>
   </div>
 
@@ -122,7 +125,7 @@
       <div class="col-lg-6" style="
         padding: 20px;
     ">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form>
           <div class="row">
             <div class="form-group col-lg-12 col-md-12">
 
@@ -173,13 +176,13 @@
         <div class="links">
           <a href="#" style="display: block;
                 text-align: left;" class="text-secondary p-3 ">
-                <i class="fa fa-phone icon-large mr-2 primary_theme_color"></i>+0123 4567 8910</a>
+            <i class="fa fa-phone icon-large mr-2 primary_theme_color"></i>+0123 4567 8910</a>
           <a href="#" style="display: block;
                 text-align: left;" class=" text-secondary p-3">
             <i class="fa fa-envelope  mr-2 primary_theme_color"></i>hello@flowbase.com</a>
           <a href="#" style="display: block;
                 text-align: left;" class=" text-secondary p-3 ">
-                 <i class="fa fa-map-marker icon-large mr-2 primary_theme_color"></i>102 street
+            <i class="fa fa-map-marker icon-large mr-2 primary_theme_color"></i>102 street
             2714 Don</a>
 
         </div>
@@ -201,81 +204,86 @@
 
 
 
-  
+
   <!---------------  Footer  ---------------------------->
   <footer class="new_footer_area bg_color">
     <div class="new_footer_top">
-        <div class="container-fluid">
-            <div class="row margin0 footrcontent">
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                        <p>Know more about vedantpay and its working.!</p>
-                        <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true" _lpchecked="1">
-                            <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                            <button class="btn btn_get btn_get_two" type="submit">Submit</button>
-                            <p class="mchimp-errmessage" style="display: none;"></p>
-                            <p class="mchimp-sucmessage" style="display: none;"></p>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
-                        <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-                        <ul class="list-unstyled f_list">
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Term &amp; conditions</a></li>
-                            <li><a href="#">Reporting</a></li>
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Support Policy</a></li>
-                            <li><a href="#">Privacy</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Get social with us</h3>
-                        <div class="f_social_icon">
-                            <a href="#" class="fa fa-facebook"></a>
-                            <a href="#" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-linkedin"></a>
-                            <a href="#" class="fa fa-pinterest"></a>
-                        </div>
-                    </div>
-                </div>
+      <div class="container-fluid">
+        <div class="row margin0 footrcontent">
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+              style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+              <p>Know more about vedantpay and its working.!</p>
+              <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true"
+                _lpchecked="1">
+                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                <button class="btn btn_get btn_get_two" type="submit">Submit</button>
+                <p class="mchimp-errmessage" style="display: none;"></p>
+                <p class="mchimp-sucmessage" style="display: none;"></p>
+              </form>
             </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s"
+              style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+              <ul class="list-unstyled f_list">
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Android App</a></li>
+                <li><a href="#">ios App</a></li>
+                <li><a href="#">Desktop</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">My tasks</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s"
+              style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list">
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Term &amp; conditions</a></li>
+                <li><a href="#">Reporting</a></li>
+                <li><a href="#">Documentation</a></li>
+                <li><a href="#">Support Policy</a></li>
+                <li><a href="#">Privacy</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s"
+              style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Get social with us</h3>
+              <div class="f_social_icon">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-pinterest"></a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="footer_bg">
-            <div class="footer_bg_one"></div>
-            <div class="footer_bg_two"></div>
-        </div>
+      </div>
+      <div class="footer_bg">
+        <div class="footer_bg_one"></div>
+        <div class="footer_bg_two"></div>
+      </div>
     </div>
     <div class="footer_bottom">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-sm-7">
-                    <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
-                </div>
-                <div class="col-lg-6 col-sm-5 text-right global_centr_align">
-                    <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 col-sm-7">
+            <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
+          </div>
+          <div class="col-lg-6 col-sm-5 text-right global_centr_align">
+            <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
+          </div>
         </div>
+      </div>
     </div>
-</footer>
+  </footer>
   <!------------------- End Footer ---------->
 
 
@@ -286,12 +294,11 @@
   <script src="./js/bootstrap.min.js" type="text/javascript"></script>
   <script src="./customScript/custom.js" type="text/javascript"></script>
   <script>
-    $(document).ready(function (){
+    $(document).ready(function () {
       AOS.init({
-      duration: 1000,
+        duration: 1000,
+      });
     });
-    });
-    
   </script>
 
 
