--- a/services.html
+++ b/services.html
@@ -49,56 +49,64 @@
   <div id="vedcontent" class="container-fluid">
     <!--  Wrapping div -->
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
-      <a class="navbar-brand" href="./index.html">
-        <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
+    <nav id="menubar" class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
+      <a class="navbar-brand" href="#">
+          <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
       </a>
-
-      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+     
+      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./services.html">Services</a>
-          </li>
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                  <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./services.html">Services</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="./gallery.html">Gallery</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="./about.html">About</a>
-          </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./gallery.html">Gallery</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact</a>
-          </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./about.html">About</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i>
-              <span>Login</span></a>
-          </li>
-        </ul>
+              <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contact</a>
+              </li>
+
+              <li class="nav-item" style="padding-left: 15px;">
+                  <a class="nav-link loginbtn" href="./login.html"><i area-hidde="true" class="icon-user"></i> <span>Login</span></a>
+              </li>
+
+              <!--<li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownId">
+                      <a class="dropdown-item" href="#">Action 1</a>
+                      <a class="dropdown-item" href="#">Action 2</a>
+                  </div>
+              </li>
+              -->
+          </ul>
       </div>
-    </nav>
+  </nav>
 
-    <!--Marquee Start-->
-    <div class="container-fluid">
-      <div class="row margin0 bgcolor2">
+   <!--Marquee Start-->
+  <div class="container-fluid">
+      <div class="row margin0" >
         <div class="col-lg-10 col-md-9 col-sm-10 col-xs-12 marqBox">
           <marquee scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-            <a href="https://nirajsony.github.io/vedantpay/login.html" target="_blank" style="color: #fff;"> वेदांत पेय
-              पर रजिस्ट्रेशन करने के लिए Online Signup https://vedantpay.com/registration क्लिक करें. </a>
+            <a href="https://nirajsony.github.io/vedantpay/login.html" class="colortextblack" target="_blank"><i class="icon-hand-right primary_theme_color"></i>  वेदांत पेय पर रजिस्ट्रेशन करने के लिए  Online Signup https://vedantpay.com/registration क्लिक करें.  <i class="icon-hand-left primary_theme_color"></i></a>
           </marquee>
         </div>
       </div>
     </div>
-    <!--Marquee End-->
+  <!--Marquee End-->
 
     <div class="mt-3 mb-5">
       <div class="row m-0">
