--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
     <div class="container-fluid " style="padding-top: 30px!important;padding-bottom: 10px!important">
       <div class="row h-100 align-items-center py-5 margin0" style="padding-top: 0px!important;padding-bottom: 0px!important">
         <div class="col-lg-12 col-md-6 text-center">
-          <h2 class="display-4  heading-line ">About us</h2>
+          <h1 class="heading-line ">About us</h1>
 
 
         </div>
@@ -108,18 +108,16 @@
     </div>
     <div class="container-fluid m-2 mx-auto" >
       <div class="row h-100 align-items-center margin0" style="padding-top: 0px!important;padding-bottom: 0px!important">
-        <div class="col-lg-12  py-0 m-0">
-          <img class="img-fluid my-0 py-0" style="width: 100%;"
-
+        <div class="col-lg-12  py-0 m-0 text-center">
+          <img class="img-fluid my-0 py-0" style="width: 80%;"
             src="https://www.vedantasset.com/admin-web/files/banner/637108851592760174_investment%20opportunities%20for%20rural%20area.jpg"
             alt="Team_img">
-       
         </div>
       </div>
     </div>
 
     <div class="bg-white container py-5" style="padding-top: 0px!important ; padding-bottom: 0px!important;">
-      <div class="container m-5 py-5  " style="padding-top: 40px!important">
+      <div class="container m-0 py-5  " style="padding-top: 40px!important">
         <div class="row align-items-center mb-5 margin0">
           <div class="col-lg-6 order-2 order-lg-1" data-aos="zoom-in"><i
 
@@ -151,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div class="container m-5 py-5">
+      <div class="container m-0 py-5">
         <div class="row align-items-center mb-5 margin0">
           <div class="col-lg-6 order-2 order-lg-1" data-aos="zoom-in"><i
 
