--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
       <nav id="menubar" class="navbar navbar-expand-sm bg-dark navbar-light bg-light sticky-top">
         <a class="navbar-brand" href="#">
             <img class="logosize" alt="vedantpay.com" src="./images/logo/logo.png">
+            <!-- <br>
+            <p class="navbar-brand tagline" href="#">Hum Hain Rahi Pyar Ke</p> -->
         </a>
        
+
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -335,7 +338,7 @@
  <!-- title start -->
  <div class="col-lg-8 col-md-12 ml-auto mr-auto marginbot15">
     <div class="whytitle">
-      <h2 class="heading-line"> Why you shoud choose us</h2>
+      <h2 class="heading-line"> Why you should choose us</h2>
       <!-- <h6 class="title"> Whether you are a retailer, distributor, individual or self help group, we have smart solutions for everyone.</h6>  -->
     </div>
   </div>
