--- a/login.html
+++ b/login.html
@@ -116,7 +116,7 @@
 
         <div class="row mb-3 px-3">
 
-          <a type="submit" class="btn globalBtn ">
+          <a type="submit" class="btn  btn_get_two">
             Login
           </a>
 
